@@ -22,6 +22,7 @@ by
 <ul>
   <li>Thomas Christensen (<a href="mailto:tchristensen@nordija.com">tchristensen@nordija.com</a>)</li>
   <li>Don Jeffery (<a href="mailto:donj@apogeenet.com">donj@apogeenet.com</a>)</li>
+  <li>Jon Dickinson (<a href="mailto:dickinson.j@ucles.org.uk">dickinson.j@ucles.org.uk</a>)</li>
 </ul>
 Version 1.1 - 2001/06/27<br>
 <p>Problems with UNC pathnames and the use of () in paths are fixed and an updateonly
@@ -95,6 +96,16 @@ specified)</td>
 <td VALIGN=TOP WIDTH="78%">Only files within this promotion group are extracted. Using
 both the <i>label</i> and the <i>promotiongroup</i> tag will cause the files in the
 promotion group and with that label to be extracted.
+</td>
+
+<td VALIGN=TOP WIDTH="10%">No</td>
+</tr>
+
+<tr>
+<td VALIGN=TOP WIDTH="12%">config</td>
+
+<td VALIGN=TOP WIDTH="78%">path of a non default .cfg file.
+Can be given absolute or relative to ant's base directory.
 </td>
 
 <td VALIGN=TOP WIDTH="10%">No</td>
